--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": ">=5.3.9",
-        "symfony/framework-bundle": "^2.3 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/framework-bundle": "^2.3 || ^3.0 || ^4.0 || ^5.0 || ^6.0 ",
         "jms/cg": "^1.1"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^2.7 || ^4.0 || ^5.0",
+        "symfony/phpunit-bridge": "^2.7 || ^4.0 || ^5.0 || ^6.0 ",
         "phpunit/phpunit": "^4.8.36 | ^5.0"
     },
     "autoload": {
